# Studio-Picrete

./: .gitignore  DESIGN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py
backend/app/api/: assistants.py  auth.py  integration.py  kb.py  pipelines.py  playground.py  preview.py  providers.py  tasks.py  tutor.py
backend/app/llm/: client.py  guidance.py  presets.py
backend/app/services/: assistant_profile.py  balance.py  chemistry_checks.py  chemistry_equations.py  chemistry_facts.py  chemistry_units.py  chemistry_validation.py  contracts.py  export.py  (+16 more)
backend/picrete_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: backup_to_s3.py  migrate_sqlite_to_pg.py  smoke.py
backend/tests/: test_analytical_chemistry_checks.py  test_assistant_profile_runtime.py  test_batch_prompt_provenance.py  test_chemistry_admission.py  test_chemistry_content_gold_cases.py  test_chemistry_equations.py  test_chemistry_units.py  test_chemistry_validation.py  test_evidence_invalidation.py  test_export_snapshot.py  test_grading_contract.py  test_grounding_sheet_ranking.py  test_integration_runtime_policy.py  test_kb_chemrag.py  test_kb_source_policy.py  test_model_use_policy.py  test_pipeline_preflight.py  test_pipeline_steps.py  test_task_approval_policy.py  test_task_revalidation_policy.py  test_taskgen_auto_admission.py  test_taskgen_batch_count.py  test_template_rubric.py  test_validation_answers.py  test_validation_data.py  test_validation_sanity.py
(+88 files in other folders)
