[project]
name = "picrete-studio"
version = "0.1.0"
description = "Picrete Studio — платформа создания и улучшения ИИ-ассистентов для преподавателей"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "PyJWT>=2.9",
    "bcrypt>=4.2",
    "cryptography>=43.0",
    "python-multipart>=0.0.9",
    "snowballstemmer>=2.2",
    "pymupdf>=1.26",
    "boto3>=1.34",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
